--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tomato timer</title>
 </head>
 
 <body>
@@ -13,70 +13,80 @@
         .timer-container {
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             height: 100vh;
         }
 
-        #timer {
-            font-size: 4rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
+        .timer-display {
+            margin-bottom: 50px;
         }
 
-        button {
-            font-size: 1.5rem;
-            padding: 0.5rem 1rem;
-            border-radius: 0.5rem;
-            border: none;
-            cursor: pointer;
-            background-color: #2ecc71;
-            color: #fff;
-            transition: all 0.2s ease;
-        }
-
-        button:hover {
-            background-color: #27ae60;
+        .timer-buttons button {
+            margin-right: 10px;
         }
     </style>
     <div class="timer-container">
-        <div id="timer">30:00</div>
-        <div class="start-button" onclick="startTimer()">Start</div>
-        <div class="reset-button" onclick="resetTimer()">Reset</div>
+        <div class="timer-display">
+            <h1 id="timer">30:00</h1>
+        </div>
+        <div class="timer-buttons">
+            <button id="start-button">Start</button>
+            <button id="pause-button">Pause</button>
+            <button id="reset-button">Reset</button>
+        </div>
     </div>
     <script>
-        let countdown;
-        let timerExpiredSound = new Audio('./meo.mp3'); // You can replace this with your own sound file.
+        const startButton = document.getElementById("start-button");
+        const pauseButton = document.getElementById("pause-button");
+        const resetButton = document.getElementById("reset-button");
+
+        let timerDisplay = document.getElementById("timer");
+        let timeLeft = 30 * 60; // 30 minutes in seconds
+        let timerId;
+        let audio = new Audio("meo.mp3"); // Replace with path to your sound file
 
         function startTimer() {
-            const countingFrom = Date.now();
-            const countingTo = countingFrom + (30 * 60 * 1000); // set the time to 25 minutes
-            displayTimeLeft((countingTo - countingFrom) / 1000);
-
-            countdown = setInterval(() => {
-                const secondsLeft = Math.round((countingTo - Date.now()) / 1000);
-
-                if (secondsLeft < 0) {
-                    clearInterval(countdown);
-                    timerExpiredSound.play(); // Play the sound when the timer expires
-                    return;
-                }
-
-                displayTimeLeft(secondsLeft);
-            }, 1000);
+            timerId = setInterval(countdown, 1000);
+            startButton.disabled = true;
+            pauseButton.disabled = false;
         }
 
-        function displayTimeLeft(seconds) {
-            const minutes = Math.floor(seconds / 60);
-            const remainderSeconds = seconds % 60;
-            const display = `${minutes}:${remainderSeconds < 10 ? '0' : ''}${remainderSeconds}`;
-            document.getElementById('timer').textContent = display;
+        function pauseTimer() {
+            clearInterval(timerId);
+            startButton.disabled = false;
+            pauseButton.disabled = true;
         }
 
         function resetTimer() {
-            clearInterval(countdown);
-            document.getElementById('timer').textContent = '25:00';
+            timeLeft = 30 * 60;
+            timerDisplay.textContent = "30:00";
+            clearInterval(timerId);
+            startButton.disabled = false;
+            pauseButton.disabled = true;
+            audio.pause(); // Stop the audio if it's playing
         }
+
+        function countdown() {
+            let minutes = Math.floor(timeLeft / 60);
+            let seconds = timeLeft % 60;
+            if (seconds < 10) {
+                seconds = "0" + seconds;
+            }
+            timerDisplay.textContent = `${minutes}:${seconds}`;
+            timeLeft--;
+            if (timeLeft < 0) {
+                clearInterval(timerId);
+                timerDisplay.textContent = "Time's up!";
+                startButton.disabled = true;
+                pauseButton.disabled = true;
+                audio.play(); // Play the sound
+            }
+        }
+
+        startButton.addEventListener("click", startTimer);
+        pauseButton.addEventListener("click", pauseTimer);
+        resetButton.addEventListener("click", resetTimer);
     </script>
 </body>
 
